--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
@@ -24,6 +24,7 @@
     "react-native-image-picker": "^8.2.0",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "^4.10.0",
     "react-navigation": "^5.0.0",
     "zustand": "^5.0.3"
   },
@@ -44,5 +45,12 @@
     "root": true
   },
   "main": "node_modules/expo/AppEntry.js",
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
